force-app/main/default/objects/ApexRule__c/ApexRule__c.object-meta.xml
<CustomObject>
    <label>Apex Rule</label>
    <nameField>
        <label>Apex Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>