force-app/main/default/objects/ApexRule__c/fields/HardStop__c.field-meta.xml
<CustomField>
    <fullName>HardStop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hard Stop ?</label>
    <type>Checkbox</type>
</CustomField>