force-app/main/default/objects/ApexRule__c/fields/Overridable__c.field-meta.xml
<CustomField>
    <fullName>Overridable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overridable</label>
    <type>Checkbox</type>
</CustomField>